traefik/03.deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.2
          volumeMounts:
            - name: traefik-config-static
              mountPath: /etc/traefik/
            - name: letsencrypt
              mountPath: "/letsencrypt/"
      volumes:
        - name: traefik-config-static
          configMap:
            name: traefik-config-static
        - name: letsencrypt
          hostPath:
            path: /home/debian/stackfiles/traefik/letsencrypt
            type: Directory
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
