traefik/02.traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      volumes:
        - name: traefik-config-static
          configMap:
            name: traefik-config-static
        # - name: letsencrypt
        #   hostPath:
        #     path: /home/nicocti/data/k3s/traefik/letsencrypt
        #     type: Directory
      containers:
        - name: traefik
          image: traefik:v2.4
          resources:
            limits:
              memory: "256Mi"
              cpu: "1"
          volumeMounts:
            - name: traefik-config-static
              mountPath: /etc/traefik/
            # - name: letsencrypt
            #   mountPath: "/letsencrypt/"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
            - name: tcpep
              containerPort: 8000
            - name: udpep
              containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
    - protocol: TCP
      port: 8000
      name: tcpep
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: traefikudp
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: UDP
      port: 9000
      name: udpep
      targetPort: 9000
