traefik/04.ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`my.domain.com`)
    kind: Rule
    services:
    - name: whoami
      port: 80
